--- a/css/main.scss
+++ b/css/main.scss
@@ -6,13 +6,12 @@
 
 
 // Import partials from `sass_dir` (defaults to `_sass`)
-@import
-        "debug",
+@import "debug"
 
-        "vendor/normalize", // No other styles should come before Normalize.css
-        "vendor/pesticide",
-        "vendor/bourbon/bourbon",
-        "base/grid-settings",
-        "vendor/neat/neat",
-        "base/base" // All additional stylesheets should be imported below Bitters
+      , "vendor/normalize" // No other styles should come before Normalize.css
+      , "vendor/pesticide"
+      , "vendor/bourbon/bourbon"
+      , "base/grid-settings"
+      , "vendor/neat/neat"
+      , "base/base" // All additional stylesheets should be imported below Bitters
 ;
