Initial setup, layout & stuff

--- a/_sass/base/_variables.scss
+++ b/_sass/base/_variables.scss
@@ -1,5 +1,8 @@
+// Font Stacks
+$rubik: "Rubik", $helvetica;
+
 // Typography
-$base-font-family: $helvetica;
+$base-font-family: $rubik;
 $heading-font-family: $base-font-family;
 
 // Font Sizes
