--- a/css/main.scss
+++ b/css/main.scss
@@ -14,4 +14,8 @@
       , "base/grid-settings"
       , "vendor/neat/neat"
       , "base/base" // All additional stylesheets should be imported below Bitters
+
+      , "sticky-footer"
+      , "layout"
+      , "components/components"
 ;
