WIP on basecamp page

--- a/_sass/components/_components.scss
+++ b/_sass/components/_components.scss
@@ -1,2 +1,6 @@
 @import "site-footer"
+      , "background-wrapper"
+      , "hello-basecamp"
+      , "intro-section"
+      , "basecamp-and-me-section"
 ;
