--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -1,10 +1,3 @@
 .page-content {
-  @include display(flex);
-  @include flex-flow(column);
-  @include align-items(center);
-
-  > * {
-    width: 100%;
-    max-width: $max-width;
-  }
+  @include vertical-stack;
 }
