--- a/css/main.scss
+++ b/css/main.scss
@@ -16,6 +16,8 @@
       , "base/base" // All additional stylesheets should be imported below Bitters
 
       , "sticky-footer"
+      , "global"
+      , "mixins"
       , "layout"
       , "components/components"
 ;
