Extracting bits and pieces into number of inclues

--- a/_sass/components/_basecamp-header.scss
+++ b/_sass/components/_basecamp-header.scss
@@ -1,6 +1,6 @@
 $light-white-color: rgb(237,241,241);
 
-.hello-basecamp {
+.basecamp-header {
   max-width: none;
   @include vertical-stack;
   @include justify-content(flex-end);
