--- a/_sass/components/_components.scss
+++ b/_sass/components/_components.scss
@@ -1,6 +1,6 @@
 @import "site-footer"
       , "background-wrapper"
-      , "hello-basecamp"
+      , "basecamp-header"
       , "intro-section"
       , "basecamp-and-me-section"
 ;
