Add more stuff in basecamp page

--- a/_includes/basecamp/intro-section.html
+++ b/_includes/basecamp/intro-section.html
@@ -1,10 +1,10 @@
 <section class="intro-section">
   <p>
-    <strong>This is <a href="http://medium.com/&#64;aliservetdonmez">Ali</a>.</strong> I am the guy who created <a href="http://workinprogress.show">Work in Progress Show website</a> for <a href="http://twitter.com/jasonfried">Jason</a> and <a href="http://twitter.com/natekontny">Nate</a>. As soon as I heard you were looking for interns in 2016, I decided to show you how much I care about your work through this page.
+    This is <a href="http://medium.com/&#64;aliservetdonmez" target="_blank">Ali</a>. I am the guy who created <a href="http://workinprogress.show" target="_blank">Work in Progress Show website</a> for <a href="http://twitter.com/jasonfried" target="_blank">Jason</a> and <a href="http://twitter.com/natekontny" target="_blank">Nate</a>. I hear you are looking for interns in 2016&hellip; Look no further, because I believe your search is over. Through this page I will show you how much I care about Basecamp and why should you pick me. At the end I hope you will make the right decision.
   </p>
 
   <p>
-    Please watch <strong>super short</strong> introduction video that I recorded <em>for you</em> and check out the product concept website that I am presenting in the video at <a href="http://talktomycustomers.com">http://talktomycustomers.com</a>.
+    But first things first &mdash; since we barely know each other, please take <strong>30 seconds</strong> to watch the video below in which I introduce myself <em>to you</em>.
   </p>
 
   <iframe class="video" src="https://player.vimeo.com/video/64761044?color=9a4024&title=0&byline=0&portrait=0" width="800" height="450" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
