--- a/_sass/components/_components.scss
+++ b/_sass/components/_components.scss
@@ -3,4 +3,7 @@
       , "basecamp-header"
       , "intro-section"
       , "basecamp-and-me-section"
+      , "testimonials-section"
+      , "talktomycustomers-section"
+      , "thumbnail-list"
 ;
