--- a/_includes/basecamp/basecamp-and-me-section.html
+++ b/_includes/basecamp/basecamp-and-me-section.html
@@ -2,20 +2,22 @@
   <div class="why-me">
     <h1 class="title">You should pick <em>me</em> because&hellip;</h1>
     <ul>
-      <li>I am dangerous enough (for sth) with coding</li>
-      <li>I do what I do with passion — that is programming</li>
-      <li>I constantly seek to learn new things and adapt my skills as I evolve</li>
-      <li>I am a very good written communicator — I pick my words carefully for careful readers to understand my thoughts as clear as possible</li>
-      <li>I am good at creating (and destroying) new ideas and love to work them become real products or features</li>
-      <li>I like watching movie trailers</li>
+      <li><a href="https://github.com/exalted" target="_blank">I am</a> a <i>dangerous enough</i> web and iOS developer with 7 years of experience. I know what Ruby on Rails is, who created it, where, when and why.</li>
+      <li>I was born in Istanbul/Turkey and I live in Cesena/Italy since 2004 on my own. I am fluent with Turkish, Italian and English; both written and spoken.</li>
+      <li>I love cooking home-made food with fresh ingredients and I like taking long walks in a beautiful sunny day. You should definitely come to visit me.</li>
+      <li>I am passionate about creating things and making products. I think writing code is <i>just</i> one piece of a bigger whole. As much as I like to write code, I am just as excited about sketching, discussing ideas, talking to users and changing my mind about wrong decisions.</li>
+      <li>I am not a <i>yes man</i>, nor do I think you need one.</li>
+      <li>I know how to say "sorry". I will come back to you to correct my take on whatever as soon as I realize I was wrong all along.</li>
+      <li>In case I wasn't clear enough explaining myself, I should mention that <strong>working with you would be a dream come true!</strong></li>
     </ul>
   </div>
   <div class="why-basecamp">
     <h1 class="title">I <strong>must</strong> work with you because&hellip;</h1>
     <ul class="list">
-      <li>Remote work (also the book)</li>
-      <li>Basecamp's company culture for employees (Jason's talks)</li>
-      <li>I have to work with people who are possibly much better than I am in what they do so I can learn from them</li>
+      <li>I work for a local software company with twenty-or-so of the nicest people. For sometime now, I feel like I took in all there was to learn and gave out all there was to teach. I think now it's time to step up my game&hellip; I think there's no better place than Basecamp to do that.</li>
+      <li>I must have read, listened or watched every single content available on the internet about Basecamp and I find my self in perfect agreement with company's culture and focus about the way you work and treat your employees. I want to be a part of it.</li>
+      <li>I am currently in the process of becoming an EU citizen, so <em><a href="https://37signals.com/remote" target="_blank">remote</a> working is a great opportunity</em> for me since I should stay resident in Italy at least another year.</li>
+      <li>I want to surround myself with people who are better than me in many ways and with people who are open to new experiences I will bring to them. <strong>I think Basecamp has those awesome people.</strong></li>
     </ul>
   </div>
 </section>
