--- a/_sass/components/_basecamp-header.scss
+++ b/_sass/components/_basecamp-header.scss
@@ -15,7 +15,7 @@ $light-white-color: rgb(237,241,241);
   > .greeting {
     font-size: $base-font-size * 5;
     font-weight: 500;
-    text-align: right;
+    // text-align: right;
     color: $light-white-color;
 
     // &:after { content: " ;-)"; }
