--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,4 @@
 <footer class="site-footer">
-  <h1>Footer</h1>
+  <a href="https://github.com/exalted" target="_blank">GitHub</a>
+  <a href="http://medium.com/&#64;aliservetdonmez" target="_blank">Medium</a>
 </footer>
