--- a/_includes/basecamp/intro-section.html
+++ b/_includes/basecamp/intro-section.html
@@ -1,10 +1,14 @@
 <section class="intro-section">
   <p>
-    This is <a href="http://medium.com/&#64;aliservetdonmez" target="_blank">Ali</a>. I am the guy who created <a href="http://workinprogress.show" target="_blank">Work in Progress Show website</a> for <a href="http://twitter.com/jasonfried" target="_blank">Jason</a> and <a href="http://twitter.com/natekontny" target="_blank">Nate</a>. I hear you are looking for interns in 2016&hellip; Look no further, because I believe your search is over. Through this page I will show you how much I care about Basecamp and why should you pick me. At the end I hope you will make the right decision.
+    This is <a href="http://medium.com/&#64;aliservetdonmez" target="_blank">Ali</a>. I am the guy who created <a href="http://workinprogress.show" target="_blank">Work in Progress Show website</a> for <a href="http://twitter.com/jasonfried" target="_blank">Jason</a> and <a href="http://twitter.com/natekontny" target="_blank">Nate</a>. I hear you are looking for interns for 2016&hellip; I am excited to tell you that I am ready for this opportunity.
   </p>
 
   <p>
-    But first things first &mdash; since we barely know each other, please take <strong>30 seconds</strong> to watch the video below in which I introduce myself <em>to you</em>.
+    Through this page I will show you how much I care about Basecamp and why should you pick me. At the end I hope you will make the right decision.
+  </p>
+
+  <p>
+    But first things first &mdash; since we barely know each other, please take <strong>30 seconds</strong> to watch the video below in which I introduce myself.
   </p>
 
   <iframe class="video" src="https://player.vimeo.com/video/64761044?color=9a4024&title=0&byline=0&portrait=0" width="800" height="450" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
