--- a/_includes/basecamp/testimonials.html
+++ b/_includes/basecamp/testimonials.html
@@ -1,19 +1,89 @@
 <section class="testimonials-section">
-  <h1 class="title">Others think of me&hellip;</h1>
+  <h1 class="title">What others think of me?</h1>
   <p>
-    Below are some of the pros and cons that people think of me. How do I know? Well... I asked dear friends, family and colleagues what do they think about me in life and work, and I asked all of them to be as direct, objective and <strong>honest</strong> as they can be &mdash; no filters applied. If you rather want to talk to them directly, that's totally fine; I will gladly put you in touch with any of them.
+    Below are some of the pros and cons that people think of me. How do I know? Well... I asked dear friends, family and colleagues what do they think about me in life and work, and I asked all of them to be as direct, objective and <strong>honest</strong> as they can be &mdash; no filters applied. I truly value and trust in the opinions of others while forming mine. This applies also to my personality. If you rather want to talk to them directly, that's totally fine; I will gladly put you in touch with any of them.
   </p>
 
-  <ul>
-    <li>Reliable, honest and trustworthy person.</li>
-    <li>You enjoy it when things get rough. You like to solve those puzzling issues when times are difficult.</li>
-    <li>You think too much. Sometimes it takes too much time for you to start your engines and go. However whatever is it that you're supposed to do, in the end often ends up to be beautiful and flawless.</li>
-    <li>Way too much patient. It would make a great teacher out of you. You can explain the most difficult stuff to anybody with one baby step at a time with great patience.</li>
-    <li>You are able to fine-balance emotional stuff and rational explanation.</li>
-    <li>I think because you spent most of your adult ages abroad with people from different cultures, you learned how to accept everyone for whom they're, without judgements.</li>
-    <li>You're very methodical, but slow. When you have to work on something what really important to you is quality and precision, rather than how much time is spent.</li>
-    <li>You're a good team player.</li>
-    <li>When solving a given problem, I think, sometimes you spend more time than what's necessary.</li>
-    <li>You prefer to understand any given problem as good as you can, instead of putting together a quick or hacky solution.</li>
-  </ul>
+  <div class="quote-list">
+    <blockquote class="-pro">
+      <p class="quote">
+        Reliable, honest and trustworthy person.
+      </p>
+      <footer>
+        <cite>Family member</cite>
+      </footer>
+    </blockquote>
+    <blockquote class="-pro">
+      <p class="quote">
+        You enjoy it when things get rough. You like to solve those puzzling issues when times are difficult.
+      </p>
+      <footer>
+        <cite>Friend</cite>
+      </footer>
+    </blockquote>
+    <blockquote class="-con">
+      <p class="quote">
+        You think too much. Sometimes it takes too much time for you to start your engines and go. However whatever is it that you're supposed to do, in the end often ends up to be beautiful and flawless.
+      </p>
+      <footer>
+        <cite>Colleague</cite>
+      </footer>
+    </blockquote>
+    <blockquote class="-pro">
+      <p class="quote">
+        Way too much patient. It would make a great teacher out of you. You can explain the most difficult stuff to anybody with one baby step at a time with great patience.
+      </p>
+      <footer>
+        <cite>Colleague</cite>
+      </footer>
+    </blockquote>
+    <blockquote class="-pro">
+      <p class="quote">
+        You are able to fine-balance emotional stuff and rational explanation.
+      </p>
+      <footer>
+        <cite>Family member</cite>
+      </footer>
+    </blockquote>
+    <blockquote class="-pro">
+      <p class="quote">
+        I think because you spent most of your adult ages abroad with people from different cultures, you learned how to accept everyone for whom they're, without judgements.
+      </p>
+      <footer>
+        <cite>Friend</cite>
+      </footer>
+    </blockquote>
+    <blockquote class="-con">
+      <p class="quote">
+        You're very methodical, but slow. When you have to work on something what really important to you is quality and precision, rather than how much time is spent.
+      </p>
+      <footer>
+        <cite>Friend</cite>
+      </footer>
+    </blockquote>
+    <blockquote class="-pro">
+      <p class="quote">
+        You're a good team player.
+      </p>
+      <footer>
+        <cite>Colleague</cite>
+      </footer>
+    </blockquote>
+    <blockquote class="-con">
+      <p class="quote">
+        When solving a given problem, I think, sometimes you spend more time than what's necessary.
+      </p>
+      <footer>
+        <cite>Friend</cite>
+      </footer>
+    </blockquote>
+    <blockquote class="-pro">
+      <p class="quote">
+        You prefer to understand any given problem as good as you can, instead of putting together a quick or hacky solution.
+      </p>
+      <footer>
+        <cite>Colleague</cite>
+      </footer>
+    </blockquote>
+  </div>
 </section>
