--- a/_sass/components/_background-wrapper.scss
+++ b/_sass/components/_background-wrapper.scss
@@ -1,10 +1,11 @@
 $light-white-color: rgb(237,241,241);
 $light-sand-color: rgb(241,223,181);
+$light-yellow-color: rgb(255,206,1);
 
 .background-wrapper {
   @include vertical-stack;
 
   max-width: none;
 
-  background-color: $light-sand-color;
+  background-color: $light-yellow-color;
 }
