--- a/_includes/basecamp/ttmc-section.html
+++ b/_includes/basecamp/ttmc-section.html
@@ -22,7 +22,7 @@
   <h2>Product decisions</h2>
 
   <p>
-    After I sat down a while and think thoroughly about what a plausible solution would look like, I came to realize there were at least three main questions needed to be answered:
+    After I sat down a while and think thoroughly about what a possible solution would look like, I came to realize there were at least three main questions needed to be answered:
   </p>
 
   <ol>
