--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,5 @@
 <footer class="site-footer">
+  <h1 class="title">Me in other places</h1>
   <a href="https://github.com/exalted" target="_blank">GitHub</a>
   <a href="http://medium.com/&#64;aliservetdonmez" target="_blank">Medium</a>
 </footer>
