Hide page content if screen is not wide enough

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,6 +2,10 @@
 layout: base
 ---
 
+<div class="hide-content">
+  <h1>Please reopen this page using a wider screen, like a tablet or a desktop computer.</h1>
+</div>
+
 <div class="page-content">
   {{ content }}
 </div>
