--- a/_sass/components/_basecamp-header.scss
+++ b/_sass/components/_basecamp-header.scss
@@ -9,9 +9,7 @@ $light-black-color: rgb(43,43,43);
   height: 60vh;
   min-height: 400px;
 
-  @include background-image(
-      linear-gradient(transparent 80%, $light-black-color 100%)
-    , url("https://git.io/vgyQ5"));
+  background-image: linear-gradient(transparent 80%, #2b2b2b 100%), url("https://git.io/vgyQ5");
   background-size: cover;
   background-position: center;
 
