--- a/_includes/basecamp/intro-section.html
+++ b/_includes/basecamp/intro-section.html
@@ -1,6 +1,6 @@
 <section class="intro-section">
   <p>
-    This is <a href="http://medium.com/&#64;aliservetdonmez" target="_blank">Ali</a>. I am the guy who created <a href="http://workinprogress.show" target="_blank">Work in Progress Show website</a> for <a href="http://twitter.com/jasonfried" target="_blank">Jason</a> and <a href="http://twitter.com/natekontny" target="_blank">Nate</a>. I hear you are looking for interns for 2016&hellip; I am excited to tell you that I am ready for this opportunity.
+    This is <a href="http://medium.com/&#64;aliservetdonmez" target="_blank">Ali</a>. I am the guy who created <a href="http://workinprogress.github.io/website/" target="_blank">Work in Progress Show website</a> for <a href="http://twitter.com/jasonfried" target="_blank">Jason</a> and <a href="http://twitter.com/natekontny" target="_blank">Nate</a>. I hear you are looking for interns for 2016&hellip; I am excited to tell you that I am ready for this opportunity.
   </p>
 
   <p>
