--- a/_includes/basecamp/ttmc-section.html
+++ b/_includes/basecamp/ttmc-section.html
@@ -12,7 +12,7 @@
 
   <h2>Where the idea came from</h2>
   <p>
-    As I am an avid follower of the <a href="http://workinprogress.show" target="_blank">Work in Progress Show</a>, when <a href="https://youtu.be/UGc-YqxVgho?t=21m41s" target="_blank">Jason mentioned</a> that he was surprised how hard it was to talk to Basecamp customers, I listened&hellip; <i>almost</i> obsessively. It appeared to be a real problem waiting to be solved, so decided to took my chances.
+    As I am an avid follower of the <a href="http://workinprogress.github.io/website/" target="_blank">Work in Progress Show</a>, when <a href="https://youtu.be/UGc-YqxVgho?t=21m41s" target="_blank">Jason mentioned</a> that he was surprised how hard it was to talk to Basecamp customers, I listened&hellip; <i>almost</i> obsessively. It appeared to be a real problem waiting to be solved, so decided to took my chances.
   </p>
 
   <p>
