--- a/_includes/basecamp/ttmc-section.html
+++ b/_includes/basecamp/ttmc-section.html
@@ -2,7 +2,7 @@
   <header>
     <h1>Talk to My Customers</h1>
     <p class="gototalktomycustomers">
-      <a href="http://talktomycustomers.com" target="_blank">Visit the website</a>
+      <a href="http://talktomycustomers.github.io/website/" target="_blank">Visit the website</a>
     </p>
   </header>
 
