Addendum fix links point at talktomycustomers.com domain name

--- a/_includes/basecamp/ttmc-section.html
+++ b/_includes/basecamp/ttmc-section.html
@@ -7,7 +7,7 @@
   </header>
 
   <p>
-    Let me walk you through the process I used to prototype the product mentioned in the video. Please check out <a href="http://talktomycustomers.com" target="_blank">http://talktomycustomers.com</a> while reading this and then read on about my process.
+    Let me walk you through the process I used to prototype the product mentioned in the video. Please check out <a href="http://talktomycustomers.github.io/website/" target="_blank">the website</a> while reading this and then read on about my process.
   </p>
 
   <h2>Where the idea came from</h2>
